--- a/marketing/web.yaml
+++ b/marketing/web.yaml
@@ -1,3 +1,22 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: web
+  labels:
+    run: web
+spec:
+  type: NodePort
+  ports:
+  - port: 80
+    targetPort: 80
+    protocol: TCP
+    name: http
+  - port: 443
+    protocol: TCP
+    name: https
+  selector:
+    run: web
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
