fixed typo with labels

--- a/Ingress.yaml
+++ b/Ingress.yaml
@@ -3,10 +3,11 @@ kind: Ingress
 metadata:
   name: web
 spec:
-  rules:
-  - host: babypointapp.com
-    http:
-      paths:
-      - backend:
-          serviceName: web
-          servicePort: 80
+ rules:
+   - host: www.babypointapp.com
+     http:
+       paths:
+         - path: /
+           backend:
+             serviceName: web
+             servicePort: 80
