--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,28 @@
-server {
-    server_name  www.babypointapp.com;
- 
-    ## send request back to apache1 ##
-    location / {
-     proxy_pass  http://web.default;
-     proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
-     proxy_redirect off;
-     proxy_buffering off;
-     proxy_set_header        Host            $host;
-     proxy_set_header        X-Real-IP       $remote_addr;
-     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-   }
+
+
+
+events {
+  worker_connections  4096;  ## Default: 1024
+}
+
+http {
+    gzip on;
+    gzip_types text/plain text/css image/svg+xml application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+    server {
+        server_name babypointapp.com;
+        return 301 $scheme://www.babypointapp.com$request_uri;
+    }
+
+    server {
+        listen 80;
+        server_name www.babypointapp.com;
+        location / {
+            proxy_pass http://web.default;
+            proxy_set_header        Host $host;
+            proxy_set_header        X-Real-IP $remote_addr;
+            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header        X-Forwarded-Proto $scheme;   
+        }
+    }
 }
